{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Combat",
            "id": "2d50eaf4-7df2-48c0-aea1-4b6214c26729",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "PassThrough",
                    "id": "3cb3a6c1-4ec2-4d91-be29-5f593d4c324c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "9290ea72-8ff5-4ab1-8e5e-45ae0f061ac0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "961d2a1d-eb3c-43f8-9a37-e5279b9ca023",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BaseSkill",
                    "type": "Button",
                    "id": "71410da8-c97f-4613-9de5-07e5a3203b8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BaseChargeSkill",
                    "type": "Button",
                    "id": "826c127d-3380-4b38-89a2-fa7cf72c09a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstSkill",
                    "type": "Button",
                    "id": "3516844f-4e52-494a-b14a-1ac477f4a57b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondSkill",
                    "type": "Button",
                    "id": "f4345dbf-d14b-4a01-92f3-08b80e9a1d83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstItem",
                    "type": "Button",
                    "id": "1a3cc931-ebeb-4ffb-a094-0adc53645bce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondItem",
                    "type": "Button",
                    "id": "bac0076e-39fb-42ff-93c9-6a5e16e22adf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThirdItem",
                    "type": "Button",
                    "id": "556d4d93-5eb1-40bc-9683-8cd8e25a8ac3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FourthItem",
                    "type": "Button",
                    "id": "8318416c-6292-4bcb-8f98-c4fe788e4fc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "638df85b-bb06-49a6-8993-6272afb97893",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6776d34-8f41-4d08-96d6-5e8dacab93af",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "66a8d3c9-beea-43d4-a1c3-d474efd096d4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b010b11d-e89b-4b53-aef0-8782cc3a2a37",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f1e964b1-ab61-4240-945d-3390bdd2b9a3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "143e74a7-964d-4266-a894-5e8360e9d44a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "91ab9711-915d-41be-a7a7-ae0f5d6bbe51",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e0216a84-30f8-4a32-9477-07342cf5093d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02474280-edc2-4397-ac92-beea7b4c94e4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "BaseSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e04938ac-b768-4914-8757-c5c14c01d83a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BaseSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2083dab-64b4-430b-a067-c8d215ceb075",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "BaseChargeSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c0d00fb-cfda-4dfa-9eba-f4a322b0e726",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BaseChargeSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87ceb40b-40df-4893-900d-d1983f106818",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ThirdItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f10b7604-ec26-4b63-af6c-77b0734027cc",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ThirdItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c3b983e-5f3d-4dfc-a5b7-c9bfb601c395",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FourthItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ca0f97f-9b78-41e9-a2f5-5eff264a8ea9",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FourthItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c1d28d4-0ca8-46f8-b7a8-f38495b61158",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FirstItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d465437c-5b5e-4a46-8804-1f54674dbcaf",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FirstItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb9abf4a-697b-41ab-b76b-0075a02cbcfc",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "SecondItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ed4ea4a-81c9-4ed2-88a0-a039ccbc40ae",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SecondItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c9c61d9-da2f-4693-851e-3224ed60e8aa",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FirstSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e815436-2d38-4be5-8567-8ea0c85960a4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FirstSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a37ef3d8-ae53-473c-bb4c-a6df60bd0347",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "SecondSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f04787fe-8e0d-43e0-b086-56abf6c1a661",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SecondSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Building",
            "id": "3798a327-eb49-4e01-87cd-4de4797789b4",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "PassThrough",
                    "id": "aca94a25-f864-4b21-9a47-defe9648cf6b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "fe4faa3d-f21d-435c-9f20-30fb0be93dd9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "7ab315ff-3912-468f-a901-c5804587d3f1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c8da211c-7e38-4d09-b62b-e585148e4733",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceObject",
                    "type": "Button",
                    "id": "91e6fd1d-0320-43f7-bc79-b0ff0499585c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenBuildings",
                    "type": "Button",
                    "id": "9af62252-90f2-4347-9890-8d698dc82258",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMinions",
                    "type": "Button",
                    "id": "a044af6e-58d2-4fd5-94b8-58b19d05ad53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "96d13a76-b0a2-452a-b688-d30df7c3d9c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4c99657-30c8-4e0e-bb23-87e61c387912",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59453045-4101-4118-aaaa-3e7c848dab17",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "bed4a3c5-6e38-412d-bffd-eac195e0588c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ee3c4b5b-d483-44ad-937e-253fabee5d21",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "54706ed2-eb5e-4863-8d78-2ff6dd9fa050",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "18903671-eff7-484e-86ea-a1aa952c80a1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "53c2d006-5e6a-4887-aee1-d3a2db261237",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b637260e-69a6-44f6-907f-10384b4a4317",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6747645d-6304-46aa-8da5-e7d72f249dd8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c79a1ea-9522-44a6-9e67-2a238b990de8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a6c7d99-4e1e-4528-9d4c-60f38afaa217",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OpenBuildings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19fbdca7-8341-4f10-91a6-0fe4e2d028a3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "OpenBuildings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "456171bc-d728-4a6e-a566-d9dbe0dacae6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OpenMinions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d342d088-1f46-4c8c-91af-71148063f114",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "OpenMinions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6acc7585-05ce-4b06-a374-ca2bdfa6bae9",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb13f8af-fdfb-48b5-aea9-f01c9d565e7a",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "a8d10ddc-2604-457d-a188-584f5c9a5046",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "0233bbca-e5a0-4406-9042-59bbd9792608",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a752e453-ce62-4249-bf00-b332ebda117f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}